Console warning when trying to access the subtype of some properties #82167

Closed
opened 2020-10-27 22:03:44 +01:00 by AquaticNightmare · 6 comments

Blender 2.90.1

When I try to access the subtype of some properties a warning pops up in the console.

running the following code :

import bpy
bpy.types.PoseBone.bl_rna.properties['rotation_axis_angle'].subtype

makes this warning appear in the console:

(bpy.rna): /home/sources/buildbot-worker-linux_centos7/linux_290/blender.git/source/blender/python/intern/bpy_rna.c:1473 pyrna_enum_to_py: current value '28' matches no enum in 'FloatProperty', 'rotation_axis_angle', 'subtype'

some other warnings I've found when trying to access other properties' subtypes:

WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '65536' matches no enum in 'FloatProperty', 'extrude', 'subtype'
WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '65536' matches no enum in 'FloatProperty', 'offset', 'subtype'
WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '65565' matches no enum in 'FloatProperty', 'dimensions', 'subtype'

I don't know if this should be considered a bug, but I've noticed it for quite some time now and I figured it could be worth asking about it.
I tend to access these properties quite frequently in my addon and the console gets flooded with these warnings very quickly.

Blender 2.90.1 When I try to access the subtype of some properties a warning pops up in the console. running the following code : ``` import bpy bpy.types.PoseBone.bl_rna.properties['rotation_axis_angle'].subtype ``` makes this warning appear in the console: ``` (bpy.rna): /home/sources/buildbot-worker-linux_centos7/linux_290/blender.git/source/blender/python/intern/bpy_rna.c:1473 pyrna_enum_to_py: current value '28' matches no enum in 'FloatProperty', 'rotation_axis_angle', 'subtype' ``` some other warnings I've found when trying to access other properties' subtypes: ``` WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '65536' matches no enum in 'FloatProperty', 'extrude', 'subtype' WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '65536' matches no enum in 'FloatProperty', 'offset', 'subtype' WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '65565' matches no enum in 'FloatProperty', 'dimensions', 'subtype' ``` I don't know if this should be considered a bug, but I've noticed it for quite some time now and I figured it could be worth asking about it. I tend to access these properties quite frequently in my addon and the console gets flooded with these warnings very quickly.

Added subscriber: @AquaticNightmare

Added subscriber: @AquaticNightmare
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-28 10:50:49 +01:00
Member

Can confirm

Looks like PropertySubType and EnumPropertyItem subtype_items- [ ] got out of sync, will fix...

Can confirm Looks like `PropertySubType` and `EnumPropertyItem subtype_items- [ ]` got out of sync, will fix...

This issue was referenced by ee4cdef4e3

This issue was referenced by ee4cdef4e3228d31ebbcc77276bfc7f037a5f814
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82167
No description provided.